assets/css/stylesheet.css
/* * {
    font-family: fantasy;
} */

html {
    scroll-behavior: smooth;
}

p {
    color: rgb(54, 161, 60);
}

header {
    background-color: orange;
    display: flex;
    justify-content: space-between;
    display: flex;
}

header nav {
    display: flex;
    width: 500px;
    background-color: orange;
    justify-content: space-around;
    align-items: center;
    font-family: fantasy;
    font-size: 20px;
}

header h1 {
    margin-left: 50px;
    font-size: 43px;
    font-family: fantasy;
}

#header-img {
    width: 100%;
    height: 600px;
    background-image: url("https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
}

#header-img h2 {
    margin-right: 50px;
    color: orange;
    background-color: rgba(52, 116, 52, 0.60);
    font-weight: bold;
    font-size: 40px;
}

#about, #contact {
    height: 300px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

#about-title, #work-title, #contact-title {
    padding: 40px;
    text-align: center;
    width: 120px;
    font-size: 35px;
    font-family: fantasy;
}

.main-section-content {
    width: 900px;
}

#work {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    background-color: orange;
}

#work-imgs-container, #contact-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: baseline;
}

#work-main-img {
    width: 100%;
}

.big-box {
    width: 100%;
    height: 400px;
    background-image: url("..//images/runbuddy.jpeg");
    background-size: cover;
}

.half-box {
    width: 435px;
    height: 350px;
    background-image: url("https://images.unsplash.com/photo-1636215570723-ceacca612687?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80");
    margin-top: 50px;
    background-size: cover;
}

#half-box1 {
    background-image: url("https://images.unsplash.com/photo-1555949963-aa79dcee981c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
    
}

#half-box2 {
    background-image: url("https://images.unsplash.com/photo-1585432959315-d9342fd58eb6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
}

#half-box3 {
    background-image: url("https://images.unsplash.com/photo-1598791318878-10e76d178023?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
}

#half-box4 {
    background-image: url("https://images.unsplash.com/photo-1534068731687-d70176c2e7d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80");
}

.column {
    height: 75%;
    background-color: greenyellow;
    width: 8px;
}

/* .contact-content {

} */

